# EngineSimulator

./: .gitignore  Databases.py  README.md  package-lock.json  package.json
.VSCodeCounter/2024-10-10_12-47-20/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
public/: index.html
src/: App.tsx  calculations.tsx  custom.d.ts  globals-context-provider.tsx  globals.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/models/: v6.stl  v8.stl
src/components/: menu.tsx  menuScreen.tsx  modelViewer.tsx  online-hub.tsx  online-hub.tsx.css  options.tsx  problemSidebar.tsx  problemSidebar.tsx.css  settings.tsx  settings.tsx.css  slider.tsx  slider.tsx.css  statisticItem.tsx  statisticItem.tsx.css  statisticList.tsx  statisticList.tsx.css  tabBar.tsx  tabBar.tsx.css  topBar.tsx  topBar.tsx.css
src/components/tabViews/: appearance.tsx  aspiration.tsx  bottom.tsx  fuelandtiming.tsx  tabElement.css  top.tsx
src/components/ui/: button.tsx  button.tsx.css  engineCard.tsx  engineCard.tsx.css  graph.tsx  options.tsx  options.tsx.css  overlay.tsx  overlay.tsx.css  slider.tsx  slider.tsx.css  statisticItem.tsx  statisticList.tsx  tabBar.tsx
src/services/: calculations.tsx  data.tsx  fileSystem.tsx  globals-context-provider.tsx  globals.tsx  onlineServices.tsx  tabOptionData.tsx  undoRedo.tsx  user.tsx
