[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.8", features = [] }
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-deep-link = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
url = "2"


